--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "exchange",
   "version": "0.0.0",
   "private": true,
+  "homepage": "terentyev-v.github.io/cryptoExchange",
   "type": "module",
   "scripts": {
     "dev": "vite",
